# clide

./: Cargo.toml  README.md
src/: app.rs  claude.rs  lib.rs  main.rs
