[package]
name = "clide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
dotenv = "0.15.0"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.118"
